# thriftphp

./: .gitignore  CMakeLists.txt  README.md
example/: a.out  x.cpp  x.php
src/: config.h  thriftphp.cc  thriftphp.h
src/parser/: Program.cpp  Program.h
src/thriftphp/: init.cc  init.h
